GitHub App: run benchmark on the app server

--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -4,6 +4,7 @@ http_ip = "0.0.0.0"
 http_port = 5900
 log_level = "info" # debug|info|warn|error
 stop_file = "config/stop-server"
+bm_runner = "travis" # travis|self
 
 [github]
 # for main repo
