--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -6,6 +6,10 @@ log_level = "info" # debug|info|warn|error
 stop_file = "config/stop-server"
 bm_runner = "travis" # travis|self
 
+[turing]
+path = "{{{ :project_root }}}/../Turing.jl"
+use_remote_branches = true
+
 [github]
 # for main repo
 app_repo = "TuringLang/TuringBenchmarks"
