--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -1,25 +1,28 @@
 # -*- mode: conf -*-
 [server]
+# deployment config of the GitHub App
 http_ip = "0.0.0.0"
 http_port = 5900
 log_level = "info" # debug|info|warn|error
 stop_file = "config/stop-server"
 bm_runner = "travis" # travis|self
 
-[turing]
-path = "{{{ :project_root }}}/../Turing.jl"
-use_remote_branches = true
-
 [github]
-# for main repo
-app_repo = "TuringLang/TuringBenchmarks"
+# the information of the bot account
+user = "TuringBenchBot"
+email = "TuringBenchBot@email.com"
+token = "PRIVATE_INFO"
 
-# for App
+# The benchmark report will be committed to this repo
+report_repo = "TuringLang/TuringBenchmarks"
+report_branch = "report"
+
+# Auth Information of the GitHub App
 app_id = 1000
 priv_pem = "config/xxxx.pem"
 secret = "the webhook secret"
 
-# for App Owner
-user = "username"
-email = "user_email"
-token = "token"
+[target]
+# Target repository: we will run benchmarks for this repo
+repo = "TuringLang/Turing.jl"
+use_remote_branches = true
