--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -14,7 +14,7 @@ email = "TuringBenchBot@email.com"
 token = "PRIVATE_INFO"
 
 # The benchmark report will be committed to this repo
-report_repo = "TuringLang/TuringBenchmarks"
+report_repo = "TuringLang/ContinuousBenchmarks.jl"
 report_branch = "report"
 
 # Auth Information of the GitHub App
