--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -27,4 +27,4 @@ secret = "the webhook secret"
 repo = "TuringLang/Turing.jl"
 use_remote_branches = true
 project_dir = "."
-benchmark_files = "benchmarks/benchmark_list.jl"
+benchmark_config_file = "benchmarks/benchmark_config.jl"
