--- a/config/app.toml.tmpl
+++ b/config/app.toml.tmpl
@@ -9,8 +9,8 @@ bm_runner = "travis" # travis|self
 
 [github]
 # the information of the bot account
-user = "TuringBenchBot"
-email = "TuringBenchBot@email.com"
+user = "BayesBot"
+email = "BayesBot@email.com"
 token = "PRIVATE_INFO"
 
 # The benchmark report will be committed to this repo
